--- a/index.html
+++ b/index.html
@@ -2,10 +2,78 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet" >
+    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
-  <body>
+<body>
 
-  </body>
+<!--Header Section -->
+<header>
+  <div class="logo">
+    <img src="resources/images/ic-logo.svg">
+    <h3 class="title">COLMAR<span class="thin">ACADEMY</span></h3>
+  </div>
+
+<!-- Nav Section for Desktop-->
+  <nav class="desktop-nav">
+    <a href="#">On Campus</a>
+    <a href="#">Online</a>
+    <a href="#">For Companies</a>
+    <a href="#">Sign In</a>
+  </nav>
+
+  <!-- Nav Section for Mobile
+  <nav class="mobile-nav">
+    <img src="resources/images/ic-logo.svg">
+    <a href="#"><img src="resources/images/ic-on-campus.svg"></a>
+    <a href="#"><img src="resources/images/ic-online.svg"></a>
+    <a href="#"><img src="resources/images/ic-login.svg"></a>
+  </nav>
+-->
+</header>
+
+<main>
+<!-- Banner Section -->
+  <section id="banner">
+    <img src="resources/images/banner.jpg">
+    <div class="side-text">
+      <h1>Learn something new every day</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+      <a href="#" class ="start">Start Here</a>
+    </div>
+  </section>
+
+<!-- Information Section -->
+  <section id="information">
+    <div class="main-pic">
+      <img src="resources/images/information-main.jpg">
+      <h2>It doesn't hurt to keep practicing</h2>
+      <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
+      <h5>Emanuel, Sr. Strategist at Hiring.com</h5>
+    </div>
+
+    <div class="stacked">
+      <div class="content-box">
+        <img src="resources/images/information-orientation.jpg">
+        <h4>Orientation Date</h4>
+        <p>Tues 10/11 & Wed 10/12: 8am-3pm</p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content-box">
+        <img src="resources/images/information-campus.jpg">
+        <h4>Our Campus</h4>
+        <p>Find a campus near you</p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content-box">
+        <img src="resources/images/information-guest-lecture.jpg">
+        <h4>Our Guest Lecture</h4>
+        <p>Join a keynote with Oliver Sacks about music in medical treatment.</p>
+        <a href="#">Read More</a>
+      </div>
+    </div>
+</body>
 </html>
