--- a/index.html
+++ b/index.html
@@ -75,5 +75,89 @@
         <a href="#">Read More</a>
       </div>
     </div>
+
+<!-- Offered Courses -->
+  <section id="courses">
+    <h2>Start Learning</h2>
+
+    <div class="course-container">
+
+      <div class="course-box">
+        <img src="resources/images/course-software.jpg">
+        <h4>Software Engineering</h4>
+        <h5>COURSES</h5>
+        <p>Web Development, Mobile Development, IoT, APIs</p>
+      </div>
+
+      <div class="course-box">
+        <img src="resources/images/course-computer-art.jpg">
+        <h4>Computer Art</h4>
+        <h5>COURSES</h5>
+        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+      </div>
+
+      <div class="course-box">
+        <img src="resources/images/course-design.jpg">
+        <h4>Design</h4>
+        <h5>COURSES</h5>
+        <p>User Experience Design, User Research, Visual Design</p>
+      </div>
+
+      <div class="course-box">
+        <img src="resources/images/course-data.jpg">
+        <h4>Data</h4>
+        <h5>COURSES</h5>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+
+      <div class="course-box">
+        <img src="resources/images/course-business.jpg">
+        <h4>Business</h4>
+        <h5>COURSES</h5>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+
+      <div class="course-box">
+        <img src="resources/images/course-marketing.jpg">
+        <h4>Marketing</h4>
+        <h5>COURSES</h5>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      </div>
+    </div>
+  </section>
+
+<!-- Thesis Exhibits -->
+  <section id="thesis">
+    <h2>Thesis Exhibits</h2>
+
+    <div class="media-container">
+      <video src="resources/videos/thesis.mp4" controls></video>
+      <h4>Reimagine Urban</h4>
+      <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
+    </div>
+
+    <div class="content-box">
+      <img src="resources/images/thesis-fisma.jpg">
+      <h4>FISMA: Design and Security</h4>
+      <p>Designer showcase of new prototype projects</p>
+    </div>
+
+    <div class="content-box">
+      <img src="resources/images/thesis-now-and-then.jpg">
+      <h4>Now and Then</h4>
+      <p>Research study about New York</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  &copy; 2017 Colmar Academy. All rights reserved
+  <a href="#">Terms</a>
+  <a href="#">Privacy</a>
+</footer>
+
+
+
+
 </body>
 </html>
