--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="resources/images/ic-logo.png" type="image/x-icon">
     <title>Colmar Academy</title>
   </head>
 <body>
@@ -12,31 +13,37 @@
 <header>
   <div class="logo">
     <img src="resources/images/ic-logo.svg">
-    <h3 class="title">COLMAR<span class="thin">ACADEMY</span></h3>
+    <span class="blue">COLMAR</span><span>ACADEMY</span>
   </div>
 
 <!-- Nav Section for Desktop-->
   <nav class="desktop-nav">
-    <a href="#">On Campus</a>
-    <a href="#">Online</a>
-    <a href="#">For Companies</a>
-    <a href="#">Sign In</a>
+    <ul>
+      <li><a href="#">On Campus</a></li>
+      <li><a href="#">Online</a></li>
+      <li><a href="#">For Companies</a></li>
+      <li><a href="#">Sign In</a></li>
+    </ul>
   </nav>
 
-  <!-- Nav Section for Mobile
   <nav class="mobile-nav">
-    <img src="resources/images/ic-logo.svg">
-    <a href="#"><img src="resources/images/ic-on-campus.svg"></a>
-    <a href="#"><img src="resources/images/ic-online.svg"></a>
-    <a href="#"><img src="resources/images/ic-login.svg"></a>
+    <ul>
+      <li><img src="resources/images/ic-logo.svg"></li>
+      <li><a href="#"><img src="resources/images/ic-on-campus.svg"></a></li>
+      <li><a href="#"><img src="resources/images/ic-online.svg"></a></li>
+      <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
+    </ul>
   </nav>
--->
+
 </header>
 
 <main>
 <!-- Banner Section -->
   <section id="banner">
-    <img src="resources/images/banner.jpg">
+    <div class="banner">
+      <img src="resources/images/banner.jpg">
+    </div>
+
     <div class="side-text">
       <h1>Learn something new every day</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
@@ -45,119 +52,181 @@
   </section>
 
 <!-- Information Section -->
-  <section id="information">
-    <div class="main-pic">
+<section id="information">
+  <div class="main">
+    <div class="info-main">
       <img src="resources/images/information-main.jpg">
-      <h2>It doesn't hurt to keep practicing</h2>
-      <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
-      <h5>Emanuel, Sr. Strategist at Hiring.com</h5>
+    </div>
+
+    <div class="description">
+      <h1>It doesn't hurt to keep practicing</h1>
+      <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p><br>
+      <p>Emanuel, Sr Strategist at Hiring.com</p>
+    </div>
     </div>
 
     <div class="stacked">
-      <div class="content-box">
-        <img src="resources/images/information-orientation.jpg">
-        <h4>Orientation Date</h4>
-        <p>Tues 10/11 & Wed 10/12: 8am-3pm</p>
-        <a href="#">Read More</a>
-      </div>
+      <div class="box">
+        <div class="pic">
+          <img src="resources/images/information-orientation.jpg" alt="">
+        </div>
+        <div class="pic-mobile">
+           <img src="resources/images/information-orientation-mobile.jpg" alt="">
+         </div>
+         <div class="description-side">
+           <h1>Orientation Date</h1>
+           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+           <br><br>
+           <a href="#">Read more</a>
+         </div>
+       </div>
 
-      <div class="content-box">
-        <img src="resources/images/information-campus.jpg">
-        <h4>Our Campus</h4>
-        <p>Find a campus near you</p>
-        <a href="#">Read More</a>
-      </div>
 
-      <div class="content-box">
-        <img src="resources/images/information-guest-lecture.jpg">
-        <h4>Our Guest Lecture</h4>
-        <p>Join a keynote with Oliver Sacks about music in medical treatment.</p>
-        <a href="#">Read More</a>
-      </div>
-    </div>
+       <div class="box">
+         <div class="pic">
+           <img src="resources/images/information-campus.jpg" alt="">
+         </div>
+         <div class="pic-mobile">
+           <img src="resources/images/information-campus-mobile.jpg" alt="">
+         </div>
+         <div class="description-side">
+           <h1>Our Campus</h1>
+           <p>Find which campus is close by you</p>
+           <br><br>
+           <a href="#">Read more</a>
+         </div>
+       </div>
+
+
+       <div class="box highlighted">
+         <div id="lecture" class="pic">
+           <img src="resources/images/information-guest-lecture.jpg" alt="">
+         </div>
+         <div class="description-side">
+           <h1>Our Guest Lecture</h1>
+           <p>Find which campus is close by you</p>
+           <br>
+           <a href="#">Read more</a>
+         </div>
+       </div>
+
+       <div class="box-mobile">
+         <div class="pic-mobile">
+           <img src="resources/images/information-guest-lecture-mobile.jpg" alt="">
+         </div>
+         <div id="desc-mobile" class="description-side">
+           <h1>Our guest lecture</h1>
+           <p>Find which campus is close by you</p>
+           <br>
+           <a href="#">Read more</a>
+         </div>
+       </div>
+     </div>
+   </section>
 
 <!-- Offered Courses -->
-  <section id="courses">
-    <h2>Start Learning</h2>
+<section id="courses">
+        <h1>Start Learning</h1>
 
-    <div class="course-container">
+        <div class="course-container">
+          <div class="course-box">
+            <img src="resources/images/course-software.jpg">
+            <div class="text">
+              <h2>Software Engineering</h2>
+              <h3>COURSES</h3>
+              <p>Web Development, Mobile<br>Development, iOT, APIs</p>
+            </div>
+          </div>
 
-      <div class="course-box">
-        <img src="resources/images/course-software.jpg">
-        <h4>Software Engineering</h4>
-        <h5>COURSES</h5>
-        <p>Web Development, Mobile Development, IoT, APIs</p>
-      </div>
+          <div class="course-box">
+            <img src="resources/images/course-computer-art.jpg">
+            <div class="text">
+              <h2>Computer Art</h2>
+              <h3>COURSES</h3>
+              <p>Imaging &amp; Design, Web Design,<br>Motion Graphics &amp; Visual Effects,<br>Computer Animation</p>
+            </div>
+          </div>
 
-      <div class="course-box">
-        <img src="resources/images/course-computer-art.jpg">
-        <h4>Computer Art</h4>
-        <h5>COURSES</h5>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-      </div>
+          <div class="course-box">
+            <img src="resources/images/course-design.jpg">
+            <div class="text">
+              <h2>Design</h2>
+              <h3>COURSES</h3>
+              <p>User Experience Design, User<br>Research, Visual Design</p>
+            </div>
+          </div>
 
-      <div class="course-box">
-        <img src="resources/images/course-design.jpg">
-        <h4>Design</h4>
-        <h5>COURSES</h5>
-        <p>User Experience Design, User Research, Visual Design</p>
-      </div>
+          <div class="course-box">
+            <img src="resources/images/course-data.jpg">
+            <div class="text">
+              <h2>Data</h2>
+              <h3>COURSES</h3>
+              <p>Data Science, Big Data, SQL, Data<br>Visualisation</p>
+            </div>
+          </div>
 
-      <div class="course-box">
-        <img src="resources/images/course-data.jpg">
-        <h4>Data</h4>
-        <h5>COURSES</h5>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
-      </div>
+          <div class="course-box">
+            <img src="resources/images/course-business.jpg">
+            <div class="text">
+              <h2>Business</h2>
+              <h3>COURSES</h3>
+              <p>Product Development, Business<br>Development, Startup</p>
+            </div>
+          </div>
 
-      <div class="course-box">
-        <img src="resources/images/course-business.jpg">
-        <h4>Business</h4>
-        <h5>COURSES</h5>
-        <p>Product Development, Business Development, Startup</p>
-      </div>
+          <div class="course-box">
+            <img src="resources/images/course-marketing.jpg">
+            <div class="text">
+              <h2>Marketing</h2>
+              <h3>COURSES</h3>
+              <p>Analytics, Content Marketing,<br>Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-      <div class="course-box">
-        <img src="resources/images/course-marketing.jpg">
-        <h4>Marketing</h4>
-        <h5>COURSES</h5>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
-      </div>
-    </div>
-  </section>
 
 <!-- Thesis Exhibits -->
-  <section id="thesis">
-    <h2>Thesis Exhibits</h2>
+<section id="thesis">
+  <h1>Thesis Exhibit</h1>
+    <section id="thesis-side">
+      <div class="urban">
+        <video src="resources/videos/thesis.mp4" autoplay loop controls></video>
+        <h3>Reimagine Urban</h3>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec
+        consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
+        magna laoreet, efficitur dolor consequat, tristique ligula"</p>
+      </div>
 
-    <div class="media-container">
-      <video src="resources/videos/thesis.mp4" controls></video>
-      <h4>Reimagine Urban</h4>
-      <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
-    </div>
+      <div class="fisma">
+        <div class="side-article highlighted">
+          <div class="side-pic">
+            <img src="resources/images/thesis-fisma.jpg">
+          </div>
+          <div class="side-text">
+            <h3>Fisma: Design </h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
 
-    <div class="content-box">
-      <img src="resources/images/thesis-fisma.jpg">
-      <h4>FISMA: Design and Security</h4>
-      <p>Designer showcase of new prototype projects</p>
-    </div>
-
-    <div class="content-box">
-      <img src="resources/images/thesis-now-and-then.jpg">
-      <h4>Now and Then</h4>
-      <p>Research study about New York</p>
-    </div>
-  </div>
-</section>
+        <div class="side-article">
+          <div class="side-pic">
+            <img  src="resources/images/thesis-now-and-then.jpg">
+          </div>
+          <div class="side-text">
+            <h3>Now and Then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
 
 <footer>
   &copy; 2017 Colmar Academy. All rights reserved
   <a href="#">Terms</a>
   <a href="#">Privacy</a>
 </footer>
-
-
-
 
 </body>
 </html>
